yamlFiles_for_Deployment/other_pod_service_and_ingress/bank-ingress.yml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: pancake-bank-ingress
  namespace: pancake-controller-space
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/user-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1 
spec: 
  rules: 
    - http:
        paths: 
        - pathType: Prefix
          path: "/pancake/(.*)"
          backend: 
            service: 
              name: pancake-service
              port: 
                number: 7070
